# AH_GLD80_bridge

./: README.md
code/: CHANGELOG.md  GLD80-MCU-Bridge.spec  INSTALL_LINUX.sh  INSTALL_MACOS.command  INSTALL_WINDOWS.cmd  README.md  START_LINUX.sh  START_MACOS.command  START_WINDOWS.cmd  UNINSTALL_LINUX.sh  UNINSTALL_MACOS.command  UNINSTALL_WINDOWS.cmd  config.example.json  pyproject.toml  requirements.txt  run.py
code/gld_mcu_bridge/: bridge.py  config.py  control_mapping.py  main.py  midi_io.py  model.py  reaper_sync.py  resources.py  startup.py  ui.py  widgets.py
code/gld_mcu_bridge/protocols/: __init__.py  gld.py  hui.py  mcu.py
code/integrations/: README_OTHER_DAWS.md
code/integrations/reaper/: GLD80 Bridge - Sync REAPER track names and colours.lua  README_REAPER.md
code/tests/: test_bridge_regressions.py
code/windows/: version_info.txt
