[project]
name = "gld80-mcu-bridge"
version = "0.6.42"
description = "Allen & Heath GLD-80 DAW bridge with MCU, HUI, Raw MIDI, mixer UI and Vegas test mode"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PySide6>=6.6",
  "mido>=1.3",
  "python-rtmidi>=1.5"
]

[project.scripts]
gld80-mcu-bridge = "gld_mcu_bridge.main:main"
